<resources>
    <string name="app_name">배달메이트</string>
    <string name="currency_unit_kor">원</string>
    <string name="delivery_fee">배달비</string>
    <string name="delivery_min">목표금액</string>
    <string name="write">글 작성하러 가기</string>
    <string name="home">홈</string>
    <string name="chat">채팅</string>
    <string name="my_page">마이페이지</string>
    <string name="report">신고하기</string>
    <string name="block">차단하기</string>
    <string name="unblock">차단해제</string>
    <string name="amount">금액</string>
    <string name="money_unit_korea">%s원</string>
    <string name="unit_korea">원</string>
    <string name="unit_korea_with_money">%s원</string>
    <string name="section">구간</string>
    <string name="next_to">다음으로</string>
    <string name="select">선택</string>
    <string name="menu">메뉴</string>
    <string name="count">수량</string>
    <string name="add">추가하기</string>
    <string name="add_menu">메뉴 추가하기</string>
    <string name="title">제목</string>
    <string name="store_location">배달 가게</string>
    <string name="delivery_platform">배달 플랫폼</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="order_amount">주문금액</string>
    <string name="bullet_textview_message_symbol">•</string>
    <string name="setting">설정</string>
    <string name="setting_notification">알림 설정</string>
    <string name="setting_location_change">거점 변경</string>
    <string name="setting_block">차단 관리</string>
    <string name="logout">로그아웃</string>
    <string name="resign">회원탈퇴</string>
    <string name="nickname">닉네임</string>
    <string name="save">저장하기</string>
    <string name="dialog_loading_wait_description">잠시만 기다려 주세요!</string>
    <string name="participate_complete">모집 완료</string>
    <string name="participate_close">모집 마감</string>
    <string name="participate_close_2">모집마감</string>
    <string name="retry">다시시도</string>
    <string name="notification_type_all">all</string>
    <string name="notification_type_newMessage">newMessage</string>
    <string name="notification_type_recruit">recruit</string>
    <string name="notification_type_notice">notice</string>
    <string name="notification_channel_default_id" translatable="false">notification</string>
    <string name="notification_channel_default_name" translatable="false">기본 알림</string>
    <string name="notification_channel_default_description" translatable="false">기타 알림을 설정합니다</string>
    <string name="notification_channel_notice_id" translatable="false">notice</string>
    <string name="notification_channel_notice_name" translatable="false">공지 알림</string>
    <string name="notification_channel_notice_description" translatable="false">새로운 공지사항이 등록되면 알림을 받습니다</string>
    <string name="notification_channel_chat_id" translatable="false">chat</string>
    <string name="notification_channel_chat_name" translatable="false">새 메시지 알림</string>
    <string name="notification_channel_chat_description" translatable="false">새 메시지가 오면 알림을 받습니다. 중요도를 변경할 경우 배달메이트에서 설정한 알림을 정상적으로 받아보지 못할 수 있습니다.</string>
    <string name="notification_channel_recruit_id" translatable="false">recruit</string>
    <string name="notification_channel_recruit_name" translatable="false">모집글 알림</string>
    <string name="notification_channel_recruit_description" translatable="false">참여하고 있는 모집글의 진행상황에 대한 알림을 받습니다. 중요도를 변경할 경우 배달메이트에서 설정한 알림을 정상적으로 받아보지 못할 수 있습니다.</string>
    <string name="notification_topic_chat" translatable="false">chat</string>
    <string name="notification_topic_notice" translatable="false">notice</string>
    <string name="notification_topic_recruit" translatable="false">recruit</string>
    <string name="my_page_setting_notification_title_actionbar">알림 설정</string>
    <string name="my_page_setting_notification_title_all">전체 알림 설정</string>
    <string name="my_page_setting_notification_description_all">앱에서 보내는 알림을 받아요</string>
    <string name="my_page_setting_notification_title_new_message">새로운 메시지 알림</string>
    <string name="my_page_setting_notification_description_new_message">참여한 모집글 채팅방의 새 메시지 알림을 받아요</string>
    <string name="my_page_setting_notification_title_recruit">모집글 알림</string>
    <string name="my_page_setting_notification_description_recruit">참여한 모집글 진행상황에 대한 알림을 받아요</string>
    <string name="my_page_setting_notification_title_notice">공지사항 알림</string>
    <string name="my_page_setting_notification_description_notice">배달메이트에서 보내는 공지사항 알림을 받아요</string>
    <string name="my_page_setting_notification_update_fail_message">알림 변경이 정상적으로 실행되지 않았습니다. 다시 실행해주세요.</string>
    <string name="post_sort_createDate">최신순</string>
    <string name="post_sort_deadlineDate">마감순</string>
    <string name="post_sort_score">평점순</string>
    <string name="post_sort_view">인기순</string>
    <string name="post_sort_available">참여가능만 보기</string>
    <string name="finish_criterion_number_people">최소인원</string>
    <string name="finish_criterion_price">목표금액</string>
    <string name="finish_criterion_time">마감시간</string>
    <string name="time_unit_years">년 전</string>
    <string name="time_unit_months">달 전</string>
    <string name="time_unit_days">일 전</string>
    <string name="time_unit_hours">시간 전</string>
    <string name="time_unit_minutes">분 전</string>
    <string name="time_unit_seconds">초 전</string>
    <string name="time_year">년</string>
    <string name="time_month">달</string>
    <string name="time_day">일</string>
    <string name="time_hour">시간</string>
    <string name="time_minute">분</string>
    <string name="time_second">초</string>
    <string name="university_seoultech">서울과기대</string>
    <string name="sunglim">성림학사</string>
    <string name="kb">KB학사</string>
    <string name="buram">불암학사</string>
    <string name="nuri">누리학사</string>
    <string name="sulim">수림학사</string>
    <string name="category_all">전체</string>
    <string name="category_korean">한식</string>
    <string name="category_chinese">중식</string>
    <string name="category_japanese">일식</string>
    <string name="category_western">양식</string>
    <string name="category_fastfood">패스트푸드</string>
    <string name="category_bunsik">분식</string>
    <string name="category_dessert">카페·디저트</string>
    <string name="category_chicken">치킨</string>
    <string name="category_pizza">피자</string>
    <string name="category_asia">아시안</string>
    <string name="category_packedmeal">도시락</string>
    <string name="permission_fail_message_camera">카메라 권한을 허용하지 않으면 사진을 등록할 수 없습니다</string>
    <string name="permission_fail_final_message_camera">카메라를 통해 사진을 등록하려면 설정에서 카메라 권한을 허용으로 변경해주세요</string>
    <string name="permission_fail_message_gallery">파일 권한을 허용하지 않으면 사진을 등록할 수 없습니다</string>
    <string name="permission_fail_final_message_gallery">갤러리를 통해 사진을 등록하려면 설정에서 파일 권한을 허용으로 변경해주세요</string>
    <string name="permission_fail_second">DENIED</string>
    <string name="permission_fail_final">EXPLAINED</string>
    <string name="select_photo_method_take_photo">카메라로 찍기</string>
    <string name="select_photo_method_gallery">앨범에서 선택</string>
    <string name="select_photo_method_reset">기본 이미지로 설정</string>
    <string name="login_select_method_kakao">카카오톡으로 시작하기</string>
    <string name="login_policy_guide_message">가입 시 배달메이트의 이용약관및 개인정보취급방침에 동의하게 됩니다.</string>
    <string name="policy_terms">이용약관</string>
    <string name="policy_privacy">개인정보취급방침</string>
    <string name="set_account_my_profile_actionbar_title">프로필 설정</string>
    <string name="home_top_title">님 주변 모집글🍴</string>
    <string name="home_top_post_contents_write_title">지금 먹고 싶은 메뉴가 생겼다면?</string>
    <string name="home_top_post_contents_write_description">합리적으로 배달시키세요!</string>
    <string name="home_contents_bottom_menu_title">메뉴 둘러보기</string>
    <string name="home_contents_bottom_post_recent_title">지금 모으고 있어요!</string>
    <string name="home_contents_bottom_post_recommend_title">배달메이트 추천</string>
    <string name="home_contents_bottom_post_recommend_category_time">마감순</string>
    <string name="home_contents_bottom_post_recommend_category_popular">인기순</string>
    <string name="home_contents_bottom_post_recommend_category_star">평점순</string>
    <string name="home_bottom_post_recommend_item_info_bottom_delivery">평점순</string>
    <string name="post_actionbar_title">글 상세 보기</string>
    <string name="user_score_format">%.1f</string>
    <string name="post_deadline_time_title">마감시간</string>
    <string name="post_deadline_time_format">%s시 %s분</string>
    <string name="post_deadline_delivery_fee_title">배달비</string>
    <string name="post_deadline_people_title">모집인원</string>
    <string name="post_deadline_people_format">%s명 / %s명</string>
    <string name="post_deadline_dormitory_title">모이는 곳</string>
    <string name="post_store_title">배달가게</string>
    <string name="post_store_location_map">지도보기</string>
    <string name="post_detail_title">상세설명</string>
    <string name="post_navigate_to_chatroom">채팅방 이동</string>
    <string name="post_participate_in">모집 참여하기</string>
    <string name="post_participate_out">모집 나가기</string>
    <string name="post_close">모집 마감하기</string>
    <string name="post_not_active">마감된 모집글입니다</string>
    <string name="post_cancel">모집 취소하기</string>
    <string name="post_delivery_fee_help_detail_title">배달비 상세정보</string>
    <string name="post_delivery_fee_help_detail_description">해당 모집글의 총 주문금액에 따른 배달팁 구간이 강조되어 표시됩니다.</string>
    <string name="post_delivery_fee_help_detail_free">배달비 없음</string>
    <string name="post_delivery_fee_help_coupon_title">쿠폰 사용 금액</string>
    <string name="post_delivery_fee_help_coupon_description">기존 금액에서 주최자의 쿠폰 사용금액만큼 할인된 후 배달비가 나누기 됩니다.</string>
    <string name="coupon_amount">쿠폰사용금액</string>
    <string name="post_map_title">배달 가게 위치</string>
    <string name="post_alert_message_close">해당 모집글이 마감처리 되었습니다</string>
    <string name="post_alert_message_cancel">해당 모집글이 취소처리 되었습니다</string>
    <string name="post_alert_message_cancel_participate">참여 취소되었습니다.</string>
    <string name="post_menu_add_title">주문할 메뉴 추가하기</string>
    <string name="post_menu_add_description">내가 시키고 싶은 메뉴들의 이름과 각 금액을 작성하고, 모집에 참여하세요!</string>
    <string name="post_menu_added_title">현재 작성 메뉴</string>
    <string name="post_category_list_empty">현재 \'%s\' 에 대한\n모집글이 없어요</string>
    <string name="post_category_list_load_fail">네트워크 통신이 원활하지 않습니다.</string>
    <string name="post_modify"><u>모집글 수정하기</u></string>
    <string name="post_cancel_dialog_title">모집을 취소하시겠습니까?</string>
    <string name="post_cancel_dialog_description">모집 취소 시, 지금까지 진행된 모집이 중단됩니다.</string>
    <string name="post_close_dialog_title">모집을 마감하시겠습니까?</string>
    <string name="post_close_dialog_description">모집 마감 시, 다른 참여자들이 해당 모집에 더 이상 참여할 수 없습니다.</string>
    <string name="post_cancel_participate_dialog_title">참여한 모집글을 나가시겠습니까?</string>
    <string name="post_cancel_participate_dialog_description">확인 버튼을 누르면 참여한 모집글에서 나가게 됩니다.</string>
    <string name="write_actionbar_title">상세 설정</string>
    <string name="write_goal_title">주문조건</string>
    <string name="review_user_title">후기 남기기</string>
    <string name="review_user_description">배달에 함께 참여한 사람들에 대한 별점을 남겨주세요\n완료버튼을 누르면 선택된 별점이 반영됩니다.</string>
    <string name="review_user_submit">평가 완료</string>
    <string name="report_reason_etc">다른 문제가 있어요</string>
    <string name="report_reason_etc_hint">신고 사유를 작성해주세요. (100자 이내)</string>
    <string name="report_user_reason_1">스팸 홍보/도배글을 올려요</string>
    <string name="report_user_reason_2">비매너 사용자에요</string>
    <string name="report_user_reason_3">정상적인 거래/환불이 이뤄지지 않았아요</string>
    <string name="report_user_reason_4">욕설을 해요</string>
    <string name="report_user_reason_5">나체 이미지/성적 행위를 해요</string>
    <string name="report_user_reason_6">혐오/차별적 발언 또는 상징을 나타내요</string>
    <string name="report_user_description">신고 심사 결과에 따라 처리됩니다. \n%s님을 차단하시겠습니까?</string>
    <string name="report_dialog_title">신고가 완료되었습니다.</string>
    <string name="report_dialog_description">신고 심사 결과에 따라 처리됩니다.</string>
    <string name="block_dialog_description">차단하더라도, 해당 사용자가 주최자 역할이 아닌 참여하고 있는 모집글과 채팅방은 정상적으로 보여지게 됩니다.</string>
</resources>