<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_white_radius_10"
    android:orientation="vertical"
    android:paddingTop="25dp">

    <TextView
        style="@style/style_title2_kor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/report_dialog_title"
        android:textColor="@color/main_FB5F1C" />

    <TextView
        style="@style/style_body2_kor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/report_dialog_description"
        android:textColor="@color/gray_dark_666666" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_dialog_report_confirm"
        style="@style/style_body1_kor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/selector_btn_gray_line_white_radius_10_bottom"
        android:gravity="center"
        android:includeFontPadding="false"
        android:minHeight="0dp"
        android:paddingVertical="14dp"
        android:text="@string/confirm"
        android:textColor="@color/black_000000" />
</LinearLayout>