<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.fragment.report.ReportUserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_report_user_actionbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageButton
                android:id="@+id/btn_report_user_actionbar_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:paddingHorizontal="16dp"
                android:src="@drawable/ic_left_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_report_user_actionbar_title"
                style="@style/style_title1_kor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report"
                android:textColor="@color/black_000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_report_user_actionbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:paddingBottom="45dp">

                <TextView
                    style="@style/style_semi_title_kor"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:textColor="@color/main_FB5F1C"
                    android:textStyle="bold"
                    tools:text="‘캡스톤 디자인’ 님을 신고하는 사유를 선택해주세요" />

                <TextView
                    style="@style/style_caption1_kor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/report_user_description"
                    android:textColor="@color/gray_dark_666666" />

                <RadioGroup
                    android:id="@+id/radiogroup_report_user_reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:animateLayoutChanges="true">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_line_EBEBEB" />

                    <RadioButton
                        android:id="@+id/radiobutton_report_user_reason_1"
                        style="@style/style_body2_kor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@drawable/selector_radiobutton_report"
                        android:layoutDirection="rtl"
                        android:text="@string/report_user_reason_1"
                        android:textColor="@drawable/selector_radiobutton_report_text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_line_EBEBEB" />

                    <RadioButton
                        android:id="@+id/radiobutton_report_user_reason_2"
                        style="@style/style_body2_kor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@drawable/selector_radiobutton_report"
                        android:layoutDirection="rtl"
                        android:text="@string/report_user_reason_2"
                        android:textColor="@drawable/selector_radiobutton_report_text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_line_EBEBEB" />

                    <RadioButton
                        android:id="@+id/radiobutton_report_user_reason_3"
                        style="@style/style_body2_kor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@drawable/selector_radiobutton_report"
                        android:layoutDirection="rtl"
                        android:text="@string/report_user_reason_3"
                        android:textColor="@drawable/selector_radiobutton_report_text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_line_EBEBEB" />

                    <RadioButton
                        android:id="@+id/radiobutton_report_user_reason_4"
                        style="@style/style_body2_kor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@drawable/selector_radiobutton_report"
                        android:layoutDirection="rtl"
                        android:text="@string/report_user_reason_4"
                        android:textColor="@drawable/selector_radiobutton_report_text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_line_EBEBEB" />

                    <RadioButton
                        android:id="@+id/radiobutton_report_user_reason_5"
                        style="@style/style_body2_kor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@drawable/selector_radiobutton_report"
                        android:layoutDirection="rtl"
                        android:text="@string/report_user_reason_5"
                        android:textColor="@drawable/selector_radiobutton_report_text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_line_EBEBEB" />

                    <RadioButton
                        android:id="@+id/radiobutton_report_user_reason_6"
                        style="@style/style_body2_kor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@drawable/selector_radiobutton_report"
                        android:layoutDirection="rtl"
                        android:text="@string/report_user_reason_6"
                        android:textColor="@drawable/selector_radiobutton_report_text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_line_EBEBEB" />

                    <RadioButton
                        android:id="@+id/radiobutton_report_user_reason_etc"
                        style="@style/style_body2_kor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@drawable/selector_radiobutton_report"
                        android:layoutDirection="rtl"
                        android:text="@string/report_reason_etc"
                        android:textColor="@drawable/selector_radiobutton_report_text" />
                </RadioGroup>

                <EditText
                    android:id="@+id/et_report_user_reason_etc"
                    style="@style/style_caption1_kor"
                    android:layout_width="match_parent"
                    android:layout_height="138dp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/background_white_radius_3_stroke_orange_line"
                    android:gravity="top"
                    android:hint="@string/report_reason_etc_hint"
                    android:inputType="textMultiLine"
                    android:maxLength="100"
                    android:paddingHorizontal="11dp"
                    android:paddingVertical="15dp"
                    android:textColorHint="@color/gray_main_C4C4C4"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_report_usersubmit"
                    style="@style/style_button_title_kor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/selector_btn_main_orange_gray_light_radius_10"
                    android:stateListAnimator="@null"
                    android:text="@string/report"
                    android:textColor="@color/white_FFFFFF" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>